// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DropDownHeader/> should render a back button if back button click handler is provided 1`] = `
<div
  className="xui-dropdown--header"
>
  <div
    className="xui-dropdown--header-container"
  >
    <div
      className="xui-dropdown--header-leftcontent"
    >
      <button
        aria-label="Back"
        className="xui-button xui-dropdown--headerbackbutton xui-button-icon xui-button-icon-small"
        data-automationid={null}
        disabled={false}
        onClick={[Function]}
        tabIndex={0}
        type="button"
      >
        <div
          className="xui-iconwrapper xui-iconwrapper-medium"
        >
          <svg
            className="xui-icon"
            focusable="false"
            height={13}
            viewBox="0 0 14 13"
            width={14}
          >
            <path
              d="M4 5.5l4-4L6.5 0 0 6.5 6.5 13 8 11.5l-4-4h10v-2z"
              role="presentation"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`<DropDownHeader/> should render all header contents in the correct order 1`] = `
<div
  className="xui-dropdown--header"
>
  <div
    className="xui-dropdown--header-container"
  >
    <div
      className="xui-dropdown--header-leftcontent"
    >
      <button
        aria-label="Back"
        className="xui-button xui-dropdown--headerbackbutton xui-button-icon xui-button-icon-small"
        data-automationid={null}
        disabled={false}
        onClick={[Function]}
        tabIndex={0}
        type="button"
      >
        <div
          className="xui-iconwrapper xui-iconwrapper-medium"
        >
          <svg
            className="xui-icon"
            focusable="false"
            height={13}
            viewBox="0 0 14 13"
            width={14}
          >
            <path
              d="M4 5.5l4-4L6.5 0 0 6.5 6.5 13 8 11.5l-4-4h10v-2z"
              role="presentation"
            />
          </svg>
        </div>
      </button>
      <div>
        left content
      </div>
      <div
        className="xui-heading-small xui-margin-left-small xui-text-truncated"
      >
        Title
      </div>
    </div>
    <div
      className="xui-dropdown--header-rightcontent"
    >
      <div
        className="xui-margin-right-xsmall xui-dropdown--header-rightcontent"
      >
        <div>
          right content
        </div>
        <button
          className="xui-button xui-button-standard xui-button-small"
          data-automationid={null}
          disabled={false}
          onClick={[Function]}
          tabIndex={0}
          type="button"
        >
          Cancel
        </button>
        <button
          className="xui-button xui-margin-left-small xui-button-main xui-button-small"
          data-automationid={null}
          disabled={false}
          onClick={[Function]}
          tabIndex={0}
          type="button"
        >
          Apply
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<DropDownHeader/> should render leftContent when provided 1`] = `
<div
  className="xui-dropdown--header"
>
  <div
    className="xui-dropdown--header-container"
  >
    <div
      className="xui-dropdown--header-leftcontent"
    >
      <div
        className="test"
      >
        content
      </div>
    </div>
  </div>
</div>
`;

exports[`<DropDownHeader/> should render primary button with custom content when onPrimaryButtonClick and primaryButtonContent are provided 1`] = `
<div
  className="xui-dropdown--header"
>
  <div
    className="xui-dropdown--header-container"
  >
    <div
      className="xui-dropdown--header-rightcontent"
    >
      <div
        className="xui-margin-right-xsmall xui-dropdown--header-rightcontent"
      >
        <button
          className="xui-button xui-margin-left-small xui-button-main xui-button-small"
          data-automationid={null}
          disabled={false}
          onClick={[Function]}
          tabIndex={0}
          type="button"
        >
          Test
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<DropDownHeader/> should render primary button with default text when onPrimaryButtonClick is provided 1`] = `
<div
  className="xui-dropdown--header"
>
  <div
    className="xui-dropdown--header-container"
  >
    <div
      className="xui-dropdown--header-rightcontent"
    >
      <div
        className="xui-margin-right-xsmall xui-dropdown--header-rightcontent"
      >
        <button
          className="xui-button xui-margin-left-small xui-button-main xui-button-small"
          data-automationid={null}
          disabled={false}
          onClick={[Function]}
          tabIndex={0}
          type="button"
        >
          Apply
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<DropDownHeader/> should render rightContent when provided 1`] = `
<div
  className="xui-dropdown--header"
>
  <div
    className="xui-dropdown--header-container"
  >
    <div
      className="xui-dropdown--header-rightcontent"
    >
      <div
        className="xui-margin-right-xsmall xui-dropdown--header-rightcontent"
      >
        <div
          className="test"
        >
          content
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<DropDownHeader/> should render secondary button with custom content when onSecondaryButtonClick and secondaryButtonContent are provided 1`] = `
<div
  className="xui-dropdown--header"
>
  <div
    className="xui-dropdown--header-container"
  >
    <div
      className="xui-dropdown--header-rightcontent"
    >
      <div
        className="xui-margin-right-xsmall xui-dropdown--header-rightcontent"
      >
        <button
          className="xui-button xui-button-standard xui-button-small"
          data-automationid={null}
          disabled={false}
          onClick={[Function]}
          tabIndex={0}
          type="button"
        >
          Test
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<DropDownHeader/> should render secondary button with default text when onSecondaryButtonClick is provided 1`] = `
<div
  className="xui-dropdown--header"
>
  <div
    className="xui-dropdown--header-container"
  >
    <div
      className="xui-dropdown--header-rightcontent"
    >
      <div
        className="xui-margin-right-xsmall xui-dropdown--header-rightcontent"
      >
        <button
          className="xui-button xui-button-standard xui-button-small"
          data-automationid={null}
          disabled={false}
          onClick={[Function]}
          tabIndex={0}
          type="button"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<DropDownHeader/> should render with a title if one is present 1`] = `
<div
  className="xui-dropdown--header"
>
  <div
    className="xui-dropdown--header-container"
  >
    <div
      className="xui-dropdown--header-leftcontent"
    >
      <div
        className="xui-heading-small xui-margin-left-small xui-text-truncated"
      >
        Title
      </div>
    </div>
  </div>
</div>
`;

exports[`<DropDownHeader/> should render with additional classes on the main element if className is provided 1`] = `
<div
  className="xui-dropdown--header classy"
/>
`;

exports[`<DropDownHeader/> should render with an automation id when passed in the qaHook prop 1`] = `
<div
  className="xui-dropdown--header"
  data-automationid="test-qahook"
/>
`;
